# StudentsDatabase

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  FileHandler.cpp  FileHandler.hpp  File_handler.h  README.md  STUDENTS2.sln  STUDENTS2.vcxproj  STUDENTS2.vcxproj.filters  Student.cpp  Student.h  Student.hpp  StudentsDatabase.cpp  StudentsDatabase.hpp  StudentsGenerator.cpp  StudentsGenerator.hpp  Students_database.h  Students_generator.h  female_name.txt  main.cpp  male_second_name.txt  students_0.txt  surname.txt  task5.txt
data/names/: female_name.txt  female_second_name.txt  male_name.txt  male_second_name.txt  surname.txt
headers/: Date.hpp  FileHandler.hpp  Student.hpp  StudentsDatabase.hpp  StudentsGenerator.hpp
include/: Date.hpp  Student.hpp  StudentsDatabase.hpp  StudentsGenerator.hpp  vector.hpp
src/: Date.cpp  FileHandler.cpp  Student.cpp  StudentsDatabase.cpp  StudentsGenerator.cpp  main.cpp
